--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.0",
+    "vite": "^6.0.11",
     "wait-on": "^7.2.0"
   },
   "dependencies": {
