--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,13 +2,13 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     /* Modules */
-    "rootDir": "../" /* Specify the root folder within your source files. */,
+    "rootDir": "src" /* Specify the root folder within your source files. */,
 
     /* Emit */
     "outDir": "dist" /* Specify an output folder for all emitted files. */
     // "noEmitOnError": true /* Disable emitting files if any type checking errors are reported. */
   },
-  "include": ["src", "../vite-project"]
+  "include": ["src"]
 }
 
 
